--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./base/logo";
 @import "./utils/link";
 @import "./utils/visually-hidden";
+@import "./base/primarybutton";
 @import "./components/activities";
 @import "./components/clients";
 @import "./components/excellence";
@@ -16,7 +17,6 @@
 @import "./components/header";
 @import "./components/hero";
 @import "./components/modal";
-@import "./components/primary-button";
 @import "./components/projects";
 @import "./components/team";
 
