--- a/css/main.css
+++ b/css/main.css
@@ -109,21 +109,14 @@ ul {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link:hover {
+.link:hover, .link:focus {
   color: var(--accent-color);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:focus {
-  color: var(--accent-color);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link.email,
-.link.tel {
+.link .email,
+.link .tel {
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -167,6 +160,22 @@ ul {
   margin: 1px;
 }
 
+.primary-button {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 216px;
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+
 .section__activities {
   padding-top: 0;
   padding-bottom: 94px;
@@ -177,7 +186,7 @@ ul {
   margin-bottom: 50px;
 }
 
-.activities__items {
+.activities__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -216,7 +225,6 @@ ul {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -230,13 +238,17 @@ ul {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .clients__items {
   width: calc((100% - 150px) / 6);
 }
 
 .clients__icon {
   fill: #afb1b8;
+}
+.clients__link:hover .clients__icon, .clients__link:focus .clients__icon {
+  fill: var(--accent-color);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__link {
@@ -260,19 +272,10 @@ ul {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients__link:hover,
-.clients__link:focus {
+.clients__link:hover, .clients__link:focus {
   border-color: var(--accent-color);
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
-  fill: var(--accent-color);
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .excellence__list {
@@ -370,9 +373,7 @@ ul {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.filter__button:hover,
-.filter__button:focus {
+.filter__button:hover, .filter__button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -386,8 +387,7 @@ ul {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.filter__button.current {
+.filter__buttoncurrent {
   background-color: #2196f3;
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -400,12 +400,17 @@ footer {
   padding-bottom: 60px;
 }
 
-footer .logo-studio {
-  color: var(--primary-white-color);
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
-.address {
-  font-style: inherit;
+footer .logo-studio {
+  color: var(--primary-white-color);
 }
 
 footer .link-logo {
@@ -413,6 +418,10 @@ footer .link-logo {
   padding-left: 0;
   margin-right: 0;
   margin-bottom: 20px;
+}
+
+.address {
+  font-style: inherit;
 }
 
 .address__container {
@@ -451,15 +460,6 @@ footer .link-logo {
   color: var(--accent-color);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
 }
 
 .connect__title {
@@ -506,16 +506,14 @@ footer .link-logo {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.connect__icon {
-  fill: #ffffff;
-}
-
-.connect__link:hover,
-.connect__link:focus {
+.connect__link:hover, .connect__link:focus {
   background-color: var(--accent-color);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.connect__icon {
+  fill: #ffffff;
 }
 
 .subscribe__container {
@@ -546,7 +544,6 @@ footer .link-logo {
   text-align: start;
   cursor: pointer;
 }
-
 .subscribe__button::after {
   content: "";
   position: absolute;
@@ -920,22 +917,6 @@ header .link-logo {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.primary-button {
-  display: inline-block;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  padding: 10px 32px;
-  min-width: 216px;
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
-  font-family: Roboto, sans-serif;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.06em;
-  text-align: center;
-}
-
 .projects__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -950,30 +931,19 @@ header .link-logo {
   text-decoration: none;
 }
 
+.project__link {
+  text-decoration: none;
+  color: var(--primary-text-color);
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .project__card {
   position: relative;
   width: 370px;
   height: 294px;
   padding: 63px, 24px;
   overflow: hidden;
-}
-
-.project__remark {
-  display: block;
-  max-width: 370px;
-  border: 1px solid #eeeeee;
-  border-top: transparent;
-  padding: 20px 24px;
-  margin: 0;
-}
-
-.project__content {
-  font-family: Roboto;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  margin: 0;
 }
 
 .project__description {
@@ -992,7 +962,6 @@ header .link-logo {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .project__card:hover .project__description {
   -webkit-transform: translateY(0);
           transform: translateY(0);
@@ -1000,6 +969,24 @@ header .link-logo {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project__content {
+  font-family: Roboto;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  margin: 0;
+}
+
+.project__remark {
+  display: block;
+  max-width: 370px;
+  border: 1px solid #eeeeee;
+  border-top: transparent;
+  padding: 20px 24px;
+  margin: 0;
 }
 
 .project__title {
@@ -1018,13 +1005,6 @@ header .link-logo {
   line-height: 1.9;
   letter-spacing: 0.03em;
   text-decoration: none;
-}
-
-.project__link {
-  text-decoration: none;
-  color: var(--primary-text-color);
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project:hover,
@@ -1102,6 +1082,11 @@ header .link-logo {
 .team-connect__icon {
   fill: rgb(175, 177, 184);
 }
+.team-connect__link:hover .team-connect__icon, .team-connect__link:focus .team-connect__icon {
+  fill: #ffffff;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .team-connect__link {
   width: 44px;
@@ -1124,17 +1109,8 @@ header .link-logo {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team-connect__link:hover,
-.team-connect__link:focus {
+.team-connect__link:hover, .team-connect__link:focus {
   background-color: var(--accent-color);
-  fill: #ffffff;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-connect__link:hover .team-connect__icon,
-.team-connect__link:focus .team-connect__icon {
   fill: #ffffff;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
