--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,22 +1,30 @@
 .clients {
     padding-top: 94px;
     padding-bottom: 94px;
-}
 
-.clients__list {
+    &__list {
     display: flex;
     gap: 30px;
     padding-left: 0;
     align-items: center;
     justify-content: center;
+    }
+
+    &__items {
+    width: calc((100% - 150px) / 6);
+    }
 }
 
-.clients__items {
-    width: calc((100% - 150px) / 6);
-}
+
 
 .clients__icon {
     fill: #afb1b8;
+
+    .clients__link:hover &,
+    .clients__link:focus & {
+            fill: var(--accent-color);
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 }
 
 .clients__link {
@@ -31,16 +39,13 @@
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients__link:hover,
-.clients__link:focus {
+    &:hover,
+    &:focus {
     border-color: var(--accent-color);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
-    fill: var(--accent-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
+
