--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,13 +3,13 @@ footer {
     padding-top: 60px;
     padding-bottom: 60px;
 }
+.footer__container {
+    display: flex;
+    align-items: baseline;
+}
 
 footer .logo-studio {
     color: var(--primary-white-color);
-}
-
-.address {
-    font-style: inherit;
 }
 
 footer .link-logo {
@@ -18,6 +18,10 @@ footer .link-logo {
     padding-left: 0;
     margin-right: 0;
     margin-bottom: 20px;
+}
+
+.address {
+    font-style: inherit;
 }
 
 .address__container {
@@ -57,10 +61,7 @@ footer .link-logo {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer__container {
-    display: flex;
-    align-items: baseline;
-}
+
 
 .connect__title {
     font-family: "Roboto";
@@ -94,17 +95,18 @@ footer .link-logo {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .connect__icon {
     fill: #ffffff;
 }
 
-.connect__link:hover,
-.connect__link:focus {
-    background-color: var(--accent-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
 .subscribe__container {
     margin-left: auto;
@@ -133,10 +135,8 @@ footer .link-logo {
 
     text-align: start;
     cursor: pointer;
-
-}
-
-.subscribe__button::after {
+        
+        &::after {
     content: "";
     position: absolute;
     top: 10px;
@@ -148,7 +148,10 @@ footer .link-logo {
     background-image: url("../img/send.svg");
     background-repeat: no-repeat;
 
+    }
 }
+
+
 
 .subscribe__input {
     width: 358px;
