--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -7,7 +7,12 @@
     margin: 0;
     text-decoration: none;
 }
-
+.project__link {
+    text-decoration: none;
+    color: var(--primary-text-color);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .project__card {
     position: relative;
     width: 370px;
@@ -15,26 +20,6 @@
     padding: 63px, 24px;
     overflow: hidden;
 
-}
-
-.project__remark {
-    display: block;
-    max-width: 370px;
-    border: 1px solid #eeeeee;
-    border-top: transparent;
-    padding: 20px 24px;
-    margin: 0;
-}
-
-.project__content {
-
-    font-family: Roboto;
-    font-size: 18px;
-    line-height: 1.55;
-    letter-spacing: 0.03em;
-    color: #ffffff;
-
-    margin: 0;
 }
 
 .project__description {
@@ -50,14 +35,34 @@
 
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.project__card:hover .project__description {
+    
+    .project__card:hover & {
     transform: translateY(0);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
+.project__content {
+
+    font-family: Roboto;
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+
+    margin: 0;
+}
+
+
+.project__remark {
+    display: block;
+    max-width: 370px;
+    border: 1px solid #eeeeee;
+    border-top: transparent;
+    padding: 20px 24px;
+    margin: 0;
+    
+}
 .project__title {
     color: var(--title-text-color);
     font-weight: 700;
@@ -76,12 +81,7 @@
     text-decoration: none;
 }
 
-.project__link {
-    text-decoration: none;
-    color: var(--primary-text-color);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 
 .project:hover,
 .project:focus {
