--- a/scss/utils/_link.scss
+++ b/scss/utils/_link.scss
@@ -10,19 +10,17 @@
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.link:hover {
+        &:hover,
+        &:focus {
     color: var(--accent-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
-.link:focus {
-    color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.link.email,
-.link.tel {
+
+.link .email,
+.link .tel {
     color: var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
